syntax = "proto3";

package domain.billing.order.v1;

option go_package = "github.com/shortlink-org/shortlink/boundaries/billing/billing/internal/domain/billing/order/v1";

import "google/protobuf/field_mask.proto";

// Order service
enum StatusOrder {
  // unspecified
  STATUS_ORDER_UNSPECIFIED = 0;

  // create order
  STATUS_ORDER_CREATE = 1;
  // pending order
  STATUS_ORDER_PENDING = 2;
  // approve order
  STATUS_ORDER_APPROVE = 3;
  // paid order
  STATUS_ORDER_PAID = 4;
  // close order
  STATUS_ORDER_CLOSE = 5;
  // reject order
  STATUS_ORDER_REJECT = 6;
}

// Order service
message Order {
  // FieldMask
  google.protobuf.FieldMask field_mask = 5;

  // order id
  string id = 1;
  // user id
  string user_id = 2;
  // tariff id
  string tariff_id = 3;
  // status order
  StatusOrder status = 4;
}

// Order list
message Orders {
  // order list
  repeated Order list = 1;
}

// Event of order
enum Event {
  // unspecified
  EVENT_UNSPECIFIED = 0;

  // new order
  EVENT_ORDER_NEW = 1;
  // update order
  EVENT_ORDER_UPDATE = 2;
  // approve order
  EVENT_ORDER_APPROVED = 3;
  // paid order
  EVENT_ORDER_PAID = 4;
  // close order
  EVENT_ORDER_CLOSE = 5;
  // reject order
  EVENT_ORDER_REJECT = 6;
}
